boolean.jj
options
{
    JAVA_UNICODE_ESCAPE = true;
    LOOKAHEAD=3;
    STATIC=false;
}

PARSER_BEGIN(BooleanParser)

package com.mesut.bool.parser2;

import core.*;
import java.util.*;

public class BooleanParser
{
 
}
PARSER_END(BooleanParser)

SKIP :
{
    " "  |   "\r"  |  "\n"  |  "\t"
}

TOKEN:
{
    <ZERO: "0">
  | <ONE: "1" >
}

TOKEN:
{
  <DIGIT: ["0"-"9"] >
}

TOKEN :
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < LBRACKET: "[" >
| < RBRACKET: "]" >
| < SEMICOLON: ";" >
| < COLON: ":" >
| < COMMA: "," >
| < QUOTE: "'" >
}

TOKEN:
{
  <EQ: "=" >
| <MINUS: "-">
| <DIV: "/">
}

TOKEN: /*built in functions */
{
  <AND: "and" | "*" | "." | "&&" | "&" >
| <OR: "or" | "+" | "||" | "|" >
| <XOR: "xor" | "^" >
| <NOR: "nor" >
| <NAND: "nand" >
| <XNOR: "xnor" >
| <NOT: "not">
}

TOKEN:
{
  <IDENT: <CHAR> (<CHAR>|<DIGIT>)*> 
| <#CHAR: ["a"-"z","A"-"Z"]>
}

func line():
{
  func f;
}
{
  f=expr() <EOF>
  {return f;}
}

func expr():
{
  func a,b;
}
{
  a=term()
  (<OR> b=expr(){a=new or(a,b);}
  |<XOR> b=expr(){a=new xor(a,b);}
  |<NOR> b=expr(){a=new nor(a,b);}
  |<XNOR> b=expr(){a=new xnor(a,b);} )*
  {return a;}
}

func term():
{
 func a,b;
}
{
  a=unary()
  ( <AND> b=term(){a=new and(a,b);}
  |<NAND> b=term(){a=new nand(a,b);} )*
  {return a;}
}

func unary():
{
  func a;
}
{
  ( a=element() [ ("!" | "'")  {   return a.not();  }] ) {
    return a;
  }
}

func element():
{
  func a;
}
{
    a=cons(){return a;}
  | a=var(){return a;}
  | "(" a=expr() ")" {return a;}
}

cons cons():
{
  cons c;
}
{
 ( "0"{c=cons.LOW;} | "1" { c=cons.HIGH; } )
  { return c; }
}

var var():
{
  var v;
  Token token;
}
{
  token=<IDENT> { return new var(token.toString()); }
}
